// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "devicegateway.grpc";
option java_outer_classname = "VoiceServiceProto";

service VoiceService {
    rpc EventStream(stream Upstream) returns (stream Downstream);
    rpc Events(stream Upstream) returns (stream Downstream);
    rpc Directives(DirectivesRequest) returns (stream Downstream);
    rpc Ping(PingRequest) returns (PingResponse);
    rpc SendCrashReport(CrashReportRequest) returns (CrashReportResponse);
}

message Upstream {
    oneof message {
        EventMessage event_message = 1;
        AttachmentMessage attachment_message = 2;
    }
}

message EventMessage {
    string context = 1;
    Event event = 2;
}

message Event {
    Header header = 1;
    string payload = 2;
}

message Downstream {
    oneof message {
        DirectiveMessage directive_message = 1;
        AttachmentMessage attachment_message = 2;
    }
}

message DirectiveMessage {
    repeated Directive directives = 1;
}

message Directive {
    Header header = 1;
    string payload = 2;
}

message AttachmentMessage {
    Attachment attachment = 1;
}

message Attachment {
    Header header = 1;
    int32 seq = 2;
    bytes content = 3;
    bool is_end = 4;

    // 16 characters / ShortUUID, https://tde.sktelecom.com/wiki/pages/viewpage.action?pageId=232002413
    string parent_message_id = 5;
    string media_type = 6;
}

message Header {
    string namespace = 1;
    string name = 2;
    string version = 6;

    // 16 characters / ShortUUID, https://tde.sktelecom.com/wiki/pages/viewpage.action?pageId=232002413
    string message_id = 4;

    // 32 characters / TimeUUID, https://tde.sktelecom.com/wiki/pages/viewpage.action?pageId=232002413
    string dialog_request_id = 5;

    // 32 characters / TimeUUID
    string referrer_dialog_request_id = 7;

    string timestamp = 8 [deprecated=true];
}

message DirectivesRequest {

}

message PingRequest {
    int32 version = 1;
}

message PingResponse {

}

message CrashReportRequest {
    message CrashReport {
        enum Level {
            ERROR = 0;
            WARN = 1;
            INFO = 2;
            DEBUG = 3;
            TRACE = 4;
        }
        Level level = 1;
        string message = 3;
        string detail = 4;
        string device_id = 5;       // crash report는 인증을 하지 못해 auth token이 없는 경우도 있으므로 참고 정보로 device_id를 추가
    }
    repeated CrashReport crash_report = 1;
}

message CrashReportResponse {

}